Bug 1533320 - introduce nsMsgMailNewsUrl::CreateURL() and override it for mailbox: URLs. r=valentin DONTBUILD