mailnews/local/src/nsMailboxUrl.h
@@ -21,6 +21,7 @@ public:
   // nsIMsgMailNewsUrl override
   nsresult SetSpecInternal(const nsACString &aSpec) override;
   nsresult SetQuery(const nsACString &aQuery) override;
+  nsresult CreateURL(const nsACString& aSpec, nsIURL **aURL) override;
 
   // from nsIMailboxUrl:
   NS_IMETHOD SetMailboxParser(nsIStreamListener * aConsumer) override;
